# scrybe

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  cli.py  docker-compose.yml  llms-install.md  package-lock.json  package.json  pill-test.txt  projects.json  pyproject.toml  tsconfig.json  tsconfig.lint.json  vitest.config.ts  vitest.scenarios.config.ts
.claude-plugin/: marketplace.json  plugin.json
.github/: codeql-config.yml  dependabot.yml
backend/: api.py  chunker.py  config.py  embedder.py  hashes.py  indexer.py  jobs.py  launcher.py  mcp_server.py  models.py  registry.py  vector_store.py
docs/: cli-reference.md  configuration.md  contributing.md  daemon.md  getting-started.md  mcp-reference.md  migration-v0.14.md
npm-hooks/: post-install.js  pre-install.js
src/: branch-state.ts  branch-tags.ts  branches.ts  chunker.ts  cli-completion.ts  cli-deprecation.ts  cli.ts  config.ts  cursors.ts  editor.ts  embed-batch-state.ts  embedder.ts  embedding-meta.ts  hashes.ts  health-probe.ts  ignore-rules.ts  index.ts  indexer.ts  install-doctor.ts  jobs-store.ts  jobs.ts  local-embedder.ts  mcp-server.ts  mcp-shim.ts  migrations.ts  normalize.ts  pinned-branches.ts  preset-resolver.ts  private-ignore.ts  providers.ts  registry.ts  reranker.ts  schema-version.ts  search.ts  types.ts  uninstall.ts  vector-store.ts
tests/: add-source-job-visibility.test.ts  auto-gc.test.ts  autostart-platform.test.ts  autostart-wizard.test.ts  branch-isolation.test.ts  (+113 more)
(+166 files in other folders)
