[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scrybe"
version = "0.1.0"
description = "Self-hosted code memory with semantic search"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "qdrant-client>=1.12",
    "openai>=1.50",
    "click>=8.1",
    "gitignore-parser>=0.1.11",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.5",
    "fastmcp>=2.0",
    "tiktoken>=0.7",
    "platformdirs>=4.0",
]

[project.scripts]
scrybe = "cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
